solving some Bugs